# MMDeployX-prototype

./: README.md
mmdeployxdetector/: README.md  local.properties  settings.gradle
mmdeployxdetector/app/: build.gradle  local.properties
mmdeployxdetector/app/release/: output-metadata.json
mmdeployxdetector/app/src/main/: AndroidManifest.xml
mmdeployxdetector/app/src/main/assets/dump_info/mobilessd/: deploy.json  detail.json  end2end.param  pipeline.json
mmdeployxdetector/app/src/main/assets/dump_info/yolo/: deploy.json  detail.json  end2end.param  pipeline.json
mmdeployxdetector/app/src/main/assets/dump_info/yolox/: deploy.json  detail.json  end2end.param  (+1 more)
mmdeployxdetector/app/src/main/java/mmdeploy/: Detector.java  ImageUtils.java  MainActivity.java  MultiBoxTracker.java  Rect.java
mmdeployxdetector/app/src/main/jni/: CMakeLists.txt  detectortools.cpp
mmdeployxdetector/app/src/main/jni/lib/cmake/MMDeploy/: MMDeployConfig.cmake  MMDeployConfigVersion.cmake  MMDeployTargets-relwithdebinfo.cmake  MMDeployTargets.cmake
mmdeployxdetector/app/src/main/jni/ncnn/arm64-v8a/include/ncnn/: platform.h
mmdeployxdetector/app/src/main/jni/ncnn/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
mmdeployxdetector/app/src/main/jni/spdlog/lib/cmake/spdlog/: spdlogConfigTargets-relwithdebinfo.cmake  spdlogConfigTargets.cmake
mmdeployxdetector/app/src/main/res/layout/: activity_main.xml
mmdeployxdetector/app/src/main/res/values/: strings.xml  themes.xml
mmdeployxdetector/app/src/main/res/values-night/: themes.xml
mmdeployxdetector/gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
